# uGetIntegration

./: README.md  ReleaseNotes.md  updates.xml
Extension/: background.html  background.js  donwload_all_popup.html  download_all.js  download_all_popup.css  main.js  manifest.json  options.css  options.html  options.js  util.js
Host/: .gitignore  AUTHORS  INSTALL  Makefile  Makefile.am  Makefile.in  README  clean  clean.sh  com.ugetdm.integration-win.json  com.ugetdm.integration.json  config.h.in  configure  configure.ac  description-pak  install_host.sh  ugetdm-integration.cpp  uninstall_host.sh
Host/Builds/OSX/ugetdm-integration.pmdoc/: 01ugetdm-contents.xml  01ugetdm.xml  02com-contents.xml  02com.xml  index.xml
Host/Builds/Win/: ugetdm-integration.nsi
Host/Source/: .gitignore  com.ugetdm.integration.json  ugetdm-integration.cpp
Host/autom4te.cache/: output.0  traces.0  traces.1
Host/builds/: uget-integration-host.sh  uget-integration-host.spec  uget-integration.sh  uget-integration.spec  ugetdm-integration-linux.sh
Host/builds/OSX/uGetIntegration_v1.0.mpkg/Contents/: Info.plist  distribution.dist
Host/builds/OSX/uGetIntegration_v1.0.mpkg/Contents/Resources/en.lproj/: Description.plist  uGetIntegration_v1.0.info
Host/builds/OSX/ugetdm-integration-host.pmdoc/: 01uget-contents.xml  01uget.xml  02com-contents.xml  02com.xml  index.xml
Host/builds/OSX/ugetdm-integration.pmdoc/: 01uget-contents.xml  01uget.xml  01ugetdm-contents.xml  01ugetdm.xml  02com-contents.xml  02com.xml  index.xml
Host/builds/Win/: .gitignore  uget-integration-host.nsi  uget-integration.nsi  ugetdm-integration.nsi
Host/src/: .gitignore  Makefile.am  Makefile.in  install_host.sh  ugetdm-integration.cpp  uninstall_host.sh
Host/src/.deps/: ugetdm-integration.Po
Releases/: uGetIntegration-1.0.1.crx
SimpleGet/: background.html  background.js  donwload_all_popup.html  donwload_all_popup.js  download_all.js  download_all_popup.css  main.js  manifest.json  options.css  options.html  options.js  util.js
